--- a/index.html
+++ b/index.html
@@ -45,18 +45,42 @@
             </li>
         </ul>
     </nav>
-    <header class="header">
-        <div class="header__content">
-            <h1 class="title">Hey</h1>
-            <h1 class="title title--secondary">I'm Trish</h1>
-            <p class="header__para">
-            I'm a <b class="accent">Frontend Software Engineer</b> with a strong passion for building web applications
-            with great user experiences.
-            <br>
-            Here's a bit more <b class="accent">about me</b>.
-        </p>
-        </div>
-    </header>
+   <header class="header">
+  <div class="header__content">
+    <h1 class="title">Hey</h1>
+    <h1 class="title title-secondary">I'm <span class="accent">Trish.</span></h1>
+    <p class="header__para">
+      I'm a <b class="accent">Frontend Software Engineer</b> with a strong passion for building web applications
+      with great user experiences.
+      <br>
+      Here's a bit more <b class="accent">about me</b>.
+    </p>
+    <ul class="socials">
+  <li>
+    <a class="socials__link" href="https://www.linkedin.com/" aria-label="LinkedIn" target="_blank" rel="noopener">
+      <i class="fa-brands fa-linkedin-in"></i>
+    </a>
+  </li>
+  <li>
+    <a class="socials__link" href="https://github.com/" aria-label="GitHub" target="_blank" rel="noopener">
+      <i class="fa-brands fa-github"></i>
+    </a>
+  </li>
+  <li>
+    <a class="socials__link" href="mailto:you@example.com" aria-label="Email">
+      <i class="fa-solid fa-envelope"></i>
+    </a>
+  </li>
+</ul>
+  </div>
+</header>
+<button class="mail__btn click">
+    <i class="fa-solid fa-envelope"></i>
+</button>
+<a href="#projects" class="scroll">
+    <div class="scroll__icon click"></div>
+</a>
+</div>
 </section>
 </body>
 </html>
