--- a/index.html
+++ b/index.html
@@ -82,5 +82,75 @@
 </a>
 </div>
 </section>
+<section id="projects">
+    <div class="row">
+        <h1 class="section__title">
+            Here are some of my <span class="accent">projects</span>
+        </h1>
+        <ul class="project__list">
+            <li class="project">
+                <div class="project__wrapper">
+                    <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                <div class="project__wrapper--bg"></div> 
+                <div class="project__description">
+                    <h3 class="project__description--title">
+                        Travel Booking Project
+                    </h3>
+                    <h4 class="project__description--sub-title">
+                        HTML, CSS, JavaScript
+                    </h4>
+                    <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim id ipsam asperiores 
+                    voluptates repellendus, quaerat tempore molestiae, incidunt officiis eaque dolores
+                    illum et odit facere
+                    </p>
+                    <div class="project__description--links">
+                        <a href="#" class="project__description--link">
+                            <i class="fa-brands fa-github"></i>
+                        <a href="#" class="project__description--link">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                    </div>
+                </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <figure>
+            <img src="./assets/logo.svg" alt="">
+        </figure>
+        <div class="footer__social--list">
+            <a href="#" class="
+            footer__social__link
+            link__hover--effect
+            link__hover--effect--white
+            ">
+            Github</a>
+        <a href="#" class="
+            footer__social__link
+            link__hover--effect
+            link__hover--effect--white
+            ">
+            LinkedIn</a>
+        <a href="#" class="
+            footer__social__link
+            link__hover--effect
+            link__hover--effect--white
+            ">
+            Email
+        </a>
+        <a href="#" class="
+            footer__social__link
+            link__hover--effect
+            link__hover--effect--white
+            ">
+            Resume</a>
+        </div>
+        <div class="footer__copyright">Copyright &copy Trish Harris, All rights reserved.</div>
+    </div>
+</footer>
 </body>
 </html>
