--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
 </section>
 <footer>
     <div class="container">
+        <div class="row footer__row"></div>
         <figure>
-            <img src="./assets/logo.svg" alt="">
+            <img class="footer__logo--img" src="./assets/logo.svg" alt="">
         </figure>
         <div class="footer__social--list">
             <a href="#" class="
