--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/c7dbcbafbf.js" crossorigin="anonymous"></script>
 </head>
+<script src="script.js" defer></script>
 <body>
   <section id="landing-page">
     <nav>
@@ -69,9 +70,11 @@
       <div class="scroll__icon click"></div>
     </a>
 
-    <!-- Modal -->
     <div class="modal" id="contactModal" aria-hidden="true" role="dialog" aria-modal="true">
-      <!-- Left: About -->
+      <button class="modal__close" type="button" aria-label="Close modal" data-close-modal>
+          <i class="fa-solid fa-xmark" aria-hidden="true"></i>
+    </button>
+
       <div class="modal__half modal__about">
         <h3 class="modal__title modal__title--about">Here's a bit about me.</h3>
         <h4 class="modal__subtitle">Let's have a chat!</h4>
