--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/c7dbcbafbf.js" crossorigin="anonymous"></script>
 </head>
-<script src="script.js" defer></script>
 <body>
   <section id="landing-page">
     <nav>
@@ -71,41 +70,61 @@
     </a>
 
     <div class="modal" id="contactModal" aria-hidden="true" role="dialog" aria-modal="true">
-      <button class="modal__close" type="button" aria-label="Close modal" data-close-modal>
-          <i class="fa-solid fa-xmark" aria-hidden="true"></i>
-    </button>
+  <button class="modal__close" type="button" aria-label="Close modal" data-close-modal>
+    <i class="fa-solid fa-xmark" aria-hidden="true"></i>
+  </button>
 
-      <div class="modal__half modal__about">
-        <h3 class="modal__title modal__title--about">Here's a bit about me.</h3>
-        <h4 class="modal__subtitle">Let's have a chat!</h4>
-        <p class="modal__para">
-          I am an experienced <span class="accent">frontend software engineer</span> with a strong passion for developing 
-          websites with great <span class="accent">user experiences</span>.
-          <br />
-          Constantly upgrading my portfolio using real-time technology to give you the highest quality
-          website to engage your potential customers.
-        </p>
-        <div class="modal__languages" aria-label="Technologies I use">
-          <i class="fa-brands fa-html5 modal__language--icon" aria-hidden="true" title="HTML5"></i>
-          <i class="fa-brands fa-css3-alt modal__language--icon" aria-hidden="true" title="CSS3"></i>
-          <i class="fa-brands fa-js modal__language--icon" aria-hidden="true" title="JavaScript"></i>
-          <i class="fa-brands fa-react modal__language--icon" aria-hidden="true" title="React"></i>
-        </div>
-      </div>
+  <div class="modal__half modal__about">
+    <h3 class="modal__title">Here's a bit about me.</h3>
+    <h4 class="modal__subtitle">Frontend Software engineer</h4>
+    <p class="modal__para">
+        I am <span class="accent">frontend software engineer</span> who wants to help you create great 
+        <span class="accent">user experiences</span>
+    </p>
+    <p>
+        I utilze many languages to <span class="accent">colloborate</span> with other <span class="accent">
+        talented</span> software engineers to create a website that will highlight your strengths 
+        to compel visitors to share.
+    </p>
 
-      <!-- Right: Contact (add form or CTA here) -->
-      <div class="modal__half modal__contact">
-        <!-- Example placeholder content -->
-        <!--
-        <form class="contact__form">
-          ...
-        </form>
-        -->
-      </div>
+    <div class="modal__languages" aria-label="Technologies I use">
+      <i class="fa-brands fa-html5  modal__language--icon modal__language--html"  title="HTML5"></i>
+      <i class="fa-brands fa-css3-alt modal__language--icon modal__language--css"  title="CSS3"></i>
+      <i class="fa-brands fa-js     modal__language--icon modal__language--js"    title="JavaScript"></i>
+      <i class="fa-brands fa-react  modal__language--icon modal__language--react" title="React"></i>
     </div>
-    <!-- /Modal -->
-  </section>
+  </div>
 
+  <div class="modal__half modal__contact">
+    <h3 class="modal__title">Let's have a chat!</h3>
+    <h4 class="modal__subtitle">Always open to new creative opportunities</h4>
+
+    <form id="contact__form" novalidate>
+      <div class="form__item">
+        <label for="name">Name</label>
+        <input id="name" class="input" name="user_name" type="text" required>
+      </div>
+      <div class="form__item">
+        <label for="email">Email</label>
+        <input id="email" class="input" name="user_email" type="email" required>
+      </div>
+      <div class="form__item">
+        <label for="message">Message</label>
+        <textarea id="message" class="input" name="message" required></textarea>
+      </div>
+      <button id="contact__submit" class="form__submit" type="submit">Send it my way</button>
+    </form>
+
+    <div class="modal__overlay modal__overlay--loading" aria-hidden="true">
+      <i class="fas fa-spinner"></i>
+    </div>
+    <div class="modal__overlay modal__overlay--success" aria-live="polite" aria-hidden="true">
+      Thanks for reaching out! I look forward to connecting with you.
+    </div>
+  </div>
+</div>
+</div>
+</section>
   <section id="projects">
     <div class="row">
       <h1 class="section__title">
@@ -159,5 +178,6 @@
       </div>
     </div>
   </footer>
+  <script src="script.js" defer></script>
 </body>
 </html>
