--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Trish Harris</title>
+
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/c7dbcbafbf.js" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
-  <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script>
-    <script type="text/javascript">
-   (function() {
-      emailjs.init("user_gMpKGYZUbmhQaUNsdY");
-   })();
-</script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script>
+    emailjs.init({ publicKey: 'gMpKGYZUbmhQaUNsd' });
+  </script>
+  <script src="script.js" defer></script>
 </head>
+
 <body>
   <section id="landing-page">
     <nav>
